@@ -5,10 +5,10 @@ COPY .mvn/ .mvn
 COPY mvnw pom.xml ./
 RUN ./mvnw -s /tmp/settings.xml dependency:go-offline
 COPY ./src ./src
-RUN ./mvnw clean install -DSkipTests
+RUN ./mvnw clean install -DskipTests
 
 FROM eclipse-temurin:21-jre-alpine
 WORKDIR /opt/app
 COPY --from=builder /opt/app/target/*.jar /opt/app/*.jar
 EXPOSE 8080
-ENTRYPOINT ["java", "-jar", "/opt/app/*.jar", "--spring.profiles.active=docker"]
+ENTRYPOINT ["java", "-XX:+UseZGC", "-XX:MaxRAMPercentage=75.0", "-XX:+ExitOnOutOfMemoryError", "-jar", "/opt/app/*.jar", "--spring.profiles.active=docker"]
